--- a/ToDo
+++ b/ToDo
@@ -1,3 +1,3 @@
 Funkcie mechaník upgrade-ov po každrej vlne zvolenie z troch (poškodenie, výdrž, pohyblivosť) bez integrácie do hlavného súboru. Umiestnenie "Mechaniky"
-Urobyť procedurálnu generáciu terénu z dlaždíc (rozmery 1 dlazdice 1024x1024 px). Umiestnenie "Mechaniky"       DONE
-Urobyť "AI" nepriatelov tak aby rovno po spawne prišli k hráčovy na vzdialenosť 20 a potom začaly na hrača strielať. Umiestnenie "Mechaniky"    
+Urobyť "AI" nepriatelov tak aby rovno po spawne prišli k hráčovy na vzdialenosť ~200px a potom začaly na hrača strielať. Umiestnenie "Mechaniky"
+Detekciu kolízii strely s nepriatelom. Umiestnenie "Mechaniky"
